--- a/build.gradle
+++ b/build.gradle
@@ -69,8 +69,13 @@ sourceSets {
 
 publishing {
 	publications{
-		mavenJava(MavenPublication){
-			from bootJar
+		bootJava(MavenPublication) {
+			artifact tasks.named("bootJar")
+		}
+	}
+	repositories {
+		maven {
+			url 'https://tejazz.jfrog.io/artifactory'
 		}
 	}
 }
@@ -125,8 +130,4 @@ artifactory {
 	clientConfig.info.setProject('project-key')
 	clientConfig.timeout = 600 // Artifactory connection timeout (in seconds). The default timeout is 300 seconds.
 	clientConfig.setInsecureTls(false) // Set to true to skip TLS certificates verification (false by default).
-}
-
-artifactoryPublish {
-	dependsOn bootRepackage
 }
