updated publication config to publish fat jar, plain jar and pom

--- a/build.gradle
+++ b/build.gradle
@@ -69,13 +69,8 @@ sourceSets {
 
 publishing {
 	publications{
-		bootJava(MavenPublication) {
-			artifact tasks.named("bootJar")
-		}
-	}
-	repositories {
-		maven {
-			url 'https://tejazz.jfrog.io/artifactory'
+		mavenJava(MavenPublication) {
+			artifact bootJar
 		}
 	}
 }
