Added gradle properties

--- a/build.gradle
+++ b/build.gradle
@@ -77,15 +77,15 @@ publishing {
 
 artifactory {
 	//The base Artifactory URL if not overridden by the publisher/resolver
-	contextUrl = 'https://tejazz.jfrog.io/artifactory'
+	contextUrl = "$artifactory_context_url"
 	publish {
 		//The base Artifactory URL for the publisher
-		contextUrl = 'https://tejazz.jfrog.io/artifactory'
+		contextUrl = "$artifactory_context_url"
 		//A closure defining publishing information
 		repository {
-			repoKey = 'RnD'    //The Artifactory repository key to publish to
-			username = 'admin'    //The publisher user name
-			password = 'Test!234'    //The publisher password or API key
+			repoKey = "$artifactory_repo_key"    //The Artifactory repository key to publish to
+			username = "$artifactory_user"    //The publisher user name
+			password = "$artifactory_password"    //The publisher password or API key
 		}
 		defaults {
 			//List of Gradle Publications (names or objects) from which to collect the list of artifacts to be deployed to Artifactory.
