updated publish config to include .pom file

--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,7 @@ sourceSets {
 publishing {
 	publications{
 		mavenJava(MavenPublication) {
+			from components.java
 			artifact bootJar
 		}
 	}
@@ -112,7 +113,6 @@ artifactory {
 			publishBuildInfo = true   //Publish build-info to Artifactory (true by default)
 			publishArtifacts = true   //Publish artifacts to Artifactory (true by default)
 			publishPom = true   //Publish generated POM files to Artifactory (true by default).
-			publishIvy = true   //Publish generated Ivy descriptor files to Artifactory (true by default).
 		}
 	}
 	// Redefine basic properties of the build info object
